crates/aion-awl/tests/fixtures/rev2/declarations/invalid/missing_required_arg.awl
//! The send call omits the required channel argument.
workflow notify_once
  input message: String
  outcome sent: type Receipt, route success
  outcome dropped: type Receipt, route failure

type Receipt { id: String, accepted: Bool }

worker notifier
  action send_message(message: String, channel: String) -> Receipt

step send
  send_message(message: message) -> receipt

  outcome ok: when receipt.accepted, route sent(id: receipt.id, accepted: receipt.accepted)
  outcome dud: otherwise, route dropped(id: receipt.id, accepted: receipt.accepted)
